Make sure the hidden input of the AbsolutePopup is not visible

--- a/src/components/modals/popup/AbsolutePopup.scss
+++ b/src/components/modals/popup/AbsolutePopup.scss
@@ -13,7 +13,11 @@
     top: 0;
     width: 0;
     height: 0;
+    padding: 0;
+    margin: 0;
     border: none;
+    outline: none;
+    overflow: hidden;
   }
 
   .absolute-popup-content {
